# pylerplate

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.test  Makefile  pyproject.toml  pyrightconfig.tpl.json  renovate.json
.github/: dependabot.yml  renovate.json
.github/workflows/: docker-publish.yml
app/: config.py  main.py  views.py
