[tool.black]
target-version = ["py310"]

exclude = '''
/(
    \.git
    htmlcov
    \.mypy_cache
    \.pytest_cache
)/
'''

[tool.poetry]
name = "pylerplate"
version = "0.2.0"
description = ""
authors = ["Dima Doroshev <dima@doroshev.com>"]

[tool.poetry.dependencies]
python = "^3.10"
isort = {version = "^5.10.1", optional = true}
ptipython = {version = "^1.0.1", optional = true}
ipython = {version = "^8.5.0", optional = true}
pre-commit = {version = "^2.20.0", optional = true}
autoflake = {version = "^1.5.3", optional = true}
sentry-sdk = "^1.9.8"
fastapi-utils = "^0.2.1"
fastapi = "^0.85.0"
ujson = "^5.5.0"
requests = "^2.26.0"
aiofiles = "^0.7.0"
uvicorn = "^0.15.0"

[tool.poetry.dev-dependencies]
pytest = "*"
pytest-cov = "*"
flake8 = "*"
mccabe = "*"
flake8-bugbear = "*"
flake8-builtins = "*"
flake8-quotes = "*"
flake8-comprehensions = "*"
flake8-string-format = "*"
flake8-debugger = "*"
flake8-eradicate = "*"
flake8-bandit = "*"
flake8-print = "*"
flake8-isort = "*"
pep8-naming = "*"
mypy = "*"
black = "*"

[tool.poetry.extras]
devtools = ["isort", "autoflake", "pre-commit", "ptipython"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
