[tool.black]
target-version = ["py311"]

exclude = '''
/(
    \.git
    htmlcov
    \.mypy_cache
    \.pytest_cache
)/
'''

[tool.poetry]
name = "pylerplate"
version = "0.3.0"
description = ""
authors = ["Dima Doroshev <dima@doroshev.com>"]

[tool.poetry.dependencies]
python = "^3.11"
isort = {version = "^5.12.0", optional = true}
ptipython = {version = "^1.0.1", optional = true}
ipython = {version = "^8.14.0", optional = true}
pre-commit = {version = "^3.3.3", optional = true}
autoflake = {version = "^2.2.0", optional = true}
sentry-sdk = "^1.28.1"
fastapi-utils = "^0.2.1"
fastapi = "^0.110.0"
ujson = "^5.8.0"
requests = "^2.31.0"
aiofiles = "^23.1.0"
uvicorn = "^0.29.0"
httpx = "^0.27.0"

[tool.poetry.group.dev.dependencies]
pytest = "*"
pytest-cov = "*"
flake8 = "*"
mccabe = "*"
flake8-bugbear = "*"
flake8-builtins = "*"
flake8-quotes = "*"
flake8-comprehensions = "*"
flake8-string-format = "*"
flake8-debugger = "*"
flake8-eradicate = "*"
flake8-bandit = "*"
flake8-print = "*"
flake8-isort = "*"
pep8-naming = "*"
mypy = "*"
black = "*"

[tool.poetry.extras]
devtools = ["isort", "autoflake", "pre-commit", "ptipython"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
